# newconan

./: .gitlab-ci.yml  MANIFEST.in  README.md  setup.py
.github/workflows/: pythonpublish.yml
newconan/: newconan.py
newconan/data/: .clang-format  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CMakeSettings.json  ExeCMakeLists.txt  LibraryCMakeLists.txt  README.md  appveyor.yml  build.py  conan.cmake  conanfile.py  export.yml  gitignore  main.cpp  mainlibrary.cpp  symlink.cmake  symlink.py  testLibrary.cpp
newconan/data/.travis/: install.sh
